samples/_failures_safe/1761421262_394f64_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fac6422a.c: In function ‘main’:
./samples/SAFE/__tmp_fac6422a.c:168:11: error: expected ‘;’ at end of input
  168 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_fac6422a.c:168:5: error: expected declaration or statement at end of input
  168 |     printf
      |     ^~~~~~
